--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 /* main */
 div {
-    border: 1px solid red;
+    border: 1px solid var(--accent);
     margin: 5px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 body {
@@ -9,8 +11,14 @@ body {
     flex-direction: row;
     width: 100%;
     height: 98vh;
-    padding: 10px;
+    padding: 7px;
     box-sizing: border-box;
+}
+
+.row-wrapper {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
 }
 
 /* side bar */
@@ -21,14 +29,30 @@ body {
     justify-content: space-around;
     height: 100%;
     width: 30%;
-    padding: 10px;
+    padding: 0.5%;
     box-sizing: border-box;
 }
 
 #sidebar div {
     width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
+}
+
+#title-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#playlist-wrapper {
+    height: 70%;
+}
+
+#playlist-wrapper div {
+    margin: 0;
+}
+
+#bottom-sidebar-wrapper {
+    height: 20%;
 }
 
 /* corkboard */
@@ -36,7 +60,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 0;
     width: 70%;
     height: 100%;
     box-sizing: border-box;
@@ -45,11 +69,15 @@ body {
 #corkboard {
     width: 100%;
     height: 100%;
+    background-image: url('../img/corkboard.png');
+    background-size: 100% 100%;
 }
 
 #shuffle-button {
     align-self: flex-end;
 }
+
+/* others */
 
 #space-guy {
     width: 50%;
