--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,43 @@ body {
 
 /* others */
 
-#space-guy {
-    width: 50%;
+#bus-pass {
+    position: absolute;
+    width: 100%;
     max-width: 400px;
-    max-height: 500px;;
+    max-height: 500px;
+
+}
+
+#participation-ribbon {
+    position:absolute;
+    top: 0;
+    width: 100%;
+    max-width: 600px;
+    max-height: 1000px;
+     
+ }
+
+ #concert-polaroid {
+    position: absolute;
+    width: 100%;
+    max-width: 800px;
+    max-height: 1000px;
+
+}
+
+#queer-prom {
+    position: absolute;
+    width: 100%;
+    max-width: 550px;
+    max-height: 700px;
+
+}
+
+#ballot-ticket {
+    position: absolute;
+    width: 100%;
+    max-width: 600px;
+    max-height: 600px;
+
 }
