TRIED adding dragging functionality to bus pass ONLY (emphasis on tried)

--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body {
     height: 100%;
     background-image: url('../img/corkboard.png');
     background-size: 100% 100%;
+    position: relative;
 }
 
 #shuffle-button {
