--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,11 @@ body {
 }
 
 #corkboard {
+    display: flex;
     width: 100%;
     height: 100%;
     background-image: url('../img/corkboard.png');
     background-size: 100% 100%;
-    position: relative;
 }
 
 #shuffle-button {
