--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@ body {
     height: 70%;
 }
 
+#playlist-disks {
+    width: fit-content;
+}
+
 #playlist-wrapper div {
     margin: 0;
 }
@@ -76,6 +80,15 @@ body {
 
 #shuffle-button {
     align-self: flex-end;
+}
+
+/* post-its */
+.post-it {
+    z-index: 500;
+    max-width: 330px;
+    height: fit-content;
+    min-height: 300px;
+    background-color: var(--accent);
 }
 
 /* others */
