--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,19 @@
 /* main */
+@font-face {
+    font-family: "Rochester";
+    src: url('../img/Rochester-Regular.ttf') format('truetype');
+}
+
 div {
-    border: 1px solid var(--accent);
+    /* border: 1px solid var(--accent); */
     margin: 5px;
     padding: 10px;
     box-sizing: border-box;
 }
 
 body {
+    font-family: "Rochester";
+    font-size: 130%;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -18,6 +25,11 @@ body {
 .row-wrapper {
     display: flex;
     flex-direction: row;
+    padding: 0;
+}
+.column-wrapper {
+    display: flex;
+    flex-direction: column;
     padding: 0;
 }
 
@@ -33,27 +45,126 @@ body {
     box-sizing: border-box;
 }
 
-#sidebar div {
-    width: 100%;
+/* logo work */
+#title-wrapper {
+    position: absolute;
+    top: 5%;
+    right: 1%;
+    width: 58%;
+    height: 20%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
 }
 
-#title-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+#logo {
+    height: 100%;
+    width: 100%;
+    padding-top: 50%;
+    padding: 0;
+    margin: 0;
 }
+
+/* playlist */
 
 #playlist-wrapper {
-    height: 70%;
-}
-
-#playlist-disks {
-    width: fit-content;
+    position: relative;
+    width: 100%;
+    height: 75%;
 }
 
 #playlist-wrapper div {
     margin: 0;
 }
+
+.disk {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 38%;
+    padding: 0px;
+    position: absolute;
+    cursor: pointer;
+    transition: top 0.5s ease-in-out, left 0.5s ease-in-out;
+}
+
+#playlist-wrapper img {
+    width: 100%;
+    height: 100%;
+}
+
+.grace-disk {
+    left: 2%; /* hug the left side */
+    top: 10%;
+}
+
+.maya-disk {
+    left: 2%; /* hug the left side */
+    top: 23%;
+}
+
+.philip-disk {
+    left: 2%; /* hug the left side */
+    top: 36%;
+}
+
+.ashley-disk {
+    left: 2%; /* hug the left side */
+    top: 49%;
+}
+
+.lyssa-disk {
+    left: 2%; /* hug the left side */
+    top: 62%;
+}
+
+.disk-currently-playing {
+    left: 52%;
+    top: 33%;
+    animation: spin 5s linear infinite;
+}
+
+.current-playlist {
+    width: 58%;
+    height: 25%;
+    padding: 0;
+    position: absolute;
+    bottom: 5%;
+    right: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#playlist-loading {
+    width: 58%;
+    height: 25%;
+    padding: 0;
+    position: absolute;
+    bottom: 5%;
+    right: 1%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 10s ease-in-out;
+}
+
+/* animations */
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* bottom of sidebar */
 
 #bottom-sidebar-wrapper {
     height: 20%;
@@ -86,10 +197,17 @@ body {
 /* post-its */
 .post-it {
     z-index: 500;
+    font-family: "Delicious Handrawn", cursive;
+    font-size: 130%;
     max-width: 330px;
     height: fit-content;
     min-height: 300px;
-    background-color: var(--accent);
+    padding: 2%;
+    background-image: url('../img/post-it.png');
+    background-size: 100% 100%;
+    position: absolute;
+    left: 25%;
+    top: 15%;
 }
 
 /* others */
