--- a/css/color.css
+++ b/css/color.css
@@ -6,6 +6,7 @@ body {
     --sub: #7c8fb8;
     --comp: #749aec;
     --text: #f5f5f5;
+    --post-it: var(--main);
 }
 
 body.grace {
@@ -14,6 +15,7 @@ body.grace {
     --sub: #C0F6A6;
     --comp: #65EC7D;
     --text: #BD2071;
+    --post-it: var(--text);
 }
 
 body.maya {
@@ -22,6 +24,7 @@ body.maya {
     --sub: #FDF4DD;
     --comp: #F5F5F5;
     --text: #8B1E1A;
+    --post-it: var(--text);
 }
 
 body.philip {
@@ -30,6 +33,7 @@ body.philip {
     --sub: #DDC4DD;
     --comp: #DCCFEC;
     --text: #1A3A3A;
+    --post-it: var(--text);
 }
 
 body.ashley {
@@ -38,6 +42,7 @@ body.ashley {
     --sub: #70798d;
     --comp: #6f95e9;
     --text: #f5f5f5;
+    --post-it: var(--main);
 }
 
 body.lyssa {
@@ -46,6 +51,7 @@ body.lyssa {
     --sub: #7F9C96;
     --comp: #8FAD8A;
     --text: #e7f2c5;
+    --post-it: var(--accent);
 }
 
 /* coloring */
@@ -72,5 +78,5 @@ body {
 }
 
 #sidebar,#playlist-wrapper,#corkboard {
-    border: 1.5px solid var(--accent);
+    border: 1.5px solid var(--post-it);
 }
