--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ body {
     animation: spin 5s linear infinite;
 }
 
-.current-playlist {
+.current-playlist-wrapper {
     width: 58%;
     height: 25%;
     padding: 0;
@@ -136,22 +136,22 @@ body {
     right: 1%;
     display: flex;
     flex-direction: column;
+    overflow-y: hidden;
     align-items: center;
     justify-content: center;
 }
 
 #playlist-loading {
-    width: 58%;
-    height: 25%;
-    padding: 0;
     position: absolute;
-    bottom: 5%;
-    right: 1%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: opacity 10s ease-in-out;
+    border-radius: 10px;
 }
 
 /* animations */
