--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,20 @@ body {
     padding: 0;
 }
 
+/* title page */
+#title-page {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 500;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* side bar */
 #sidebar {
     display: flex;
