--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
 }
 
 div {
-    /* border: 1px solid var(--accent); */
-    margin: 5px;
+    border: 1px solid var(--accent);
     padding: 10px;
     box-sizing: border-box;
 }
@@ -55,8 +54,8 @@ body {
     justify-content: space-around;
     height: 100%;
     width: 30%;
-    padding: 0.5%;
     box-sizing: border-box;
+    margin: 0;
 }
 
 /* logo work */
@@ -88,10 +87,23 @@ body {
     position: relative;
     width: 100%;
     height: 75%;
+    margin-bottom: 10px;
+    padding: 1%;
 }
 
 #playlist-wrapper div {
     margin: 0;
+}
+
+#playlist-wrapper img {
+    width: 100%;
+    height: 100%;
+}
+
+.disk-stack-wrapper {
+    position: relative;
+    width: 100%;
+    height: 83%;
 }
 
 .disk {
@@ -101,38 +113,29 @@ body {
     width: 38%;
     padding: 0px;
     position: absolute;
+    left: 0;
     cursor: pointer;
     transition: top 0.5s ease-in-out, left 0.5s ease-in-out;
 }
 
-#playlist-wrapper img {
-    width: 100%;
-    height: 100%;
-}
-
 .grace-disk {
-    left: 2%; /* hug the left side */
-    top: 10%;
+    top: 0;
 }
 
 .maya-disk {
-    left: 2%; /* hug the left side */
-    top: 23%;
+    top: 14%;
 }
 
 .philip-disk {
-    left: 2%; /* hug the left side */
-    top: 36%;
+    top: 28%;
 }
 
 .ashley-disk {
-    left: 2%; /* hug the left side */
-    top: 49%;
+    top: 42%;
 }
 
 .lyssa-disk {
-    left: 2%; /* hug the left side */
-    top: 62%;
+    top: 56%;
 }
 
 .disk-currently-playing {
@@ -141,13 +144,13 @@ body {
     animation: spin 5s linear infinite;
 }
 
-.current-playlist-wrapper {
-    width: 58%;
-    height: 25%;
+.spotify-embed-wrapper {
+    width: 96%;
+    height: 15%;
     padding: 0;
     position: absolute;
-    bottom: 5%;
-    right: 1%;
+    bottom: 2%;
+    left: 2%;
     display: flex;
     flex-direction: column;
     overflow-y: hidden;
@@ -155,7 +158,7 @@ body {
     justify-content: center;
 }
 
-#playlist-loading {
+.spotify-embed-wrapper div {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -166,6 +169,23 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+}
+
+#playlist-loading {
+    z-index: 50;
+}
+
+.current-playlist-text {
+    width: 58%;
+    height: 10%;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.current-playlist-text p {
+    margin: 0;
+    text-align: center;
 }
 
 /* animations */
@@ -181,7 +201,7 @@ body {
 /* bottom of sidebar */
 
 #bottom-sidebar-wrapper {
-    height: 20%;
+    height: 25%;
 }
 
 /* corkboard */
