--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ h1, h2, h3 {
     position: absolute;
     top: 5%;
     right: 1%;
-    width: 58%;
+    /* width: 58%; */
     height: 20%;
     display: flex;
     flex-direction: row;
@@ -95,6 +95,7 @@ h1, h2, h3 {
     justify-content: space-between;
     margin: 0;
     padding: 0;
+    padding-right: 9px;
 }
 
 #logo {
