--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,13 @@ body {
     font-size: 130%;
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 99vw;
     height: 98vh;
     padding: 7px;
+    justify-content: space-evenly;
     box-sizing: border-box;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .row-wrapper {
@@ -237,6 +240,7 @@ h1, h2, h3 {
     padding: 0;
     width: 70%;
     height: 100%;
+    margin-left: 10px;
     box-sizing: border-box;
 }
 
@@ -251,7 +255,13 @@ h1, h2, h3 {
 
 #shuffle-button {
     border: none;
+    border-radius: 6px;
+    text-align: center;
+    height: 30px;
+    width: 150px;
     align-self: flex-end;
+    z-index: 500;
+    cursor: pointer;
 }
 
 /* post-its */
@@ -267,239 +277,32 @@ h1, h2, h3 {
     background-size: 100% 100%;
     position: absolute;
     left: 25%;
-    top: 15%;
+    top: 18%;
+}
+
+.post-it2 {
+    left: 0;
+    top: 0;
+    right: 25%;
+    bottom: 22%;
+}
+
+#bottom-sidebar-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
 }
 
 /* confession link post-it img */
 /* make it highlight or something when mouse hovers over it */
 .confession {
-    max-width: 200px;
-    min-height: 200px;
-    position: relative;
+    height: 22vh;
+    cursor: pointer;
 }
 
 /* sticker sheet */
 .sticker-sheet {
-    max-width: 160px;
-    height: fit-content;
-    min-height: 200px;
-    position: relative;
+    height: 22vh;
     /* idk how to make it change in size alongside the website screen */
 }
-
-/* others */
-
-.corkboard-des img {
-    position: absolute;
-}
-
-#bus-pass {
-    top: 15px;
-    right: 20px;
-    width: 100%;
-    max-width: 150px;
-    max-height: 500px;
-}
-
-#participation-ribbon {
-    top: 10px;
-    left: 5px;
-    width: 100%;
-    max-width: 200px;
-    max-height: 800px;
- }
-
-#concert-polaroid {
-    bottom: 50px;
-    left: 150px;
-    width: 100%;
-    max-width: 150px;
-    max-height: 500px;
-}
-
-#queer-prom {
-    top: 50px;
-    right: 150px;
-    width: 100%;
-    max-width: 400px;
-    max-height: 650px;
-}
-
-#kewpie-moth {
-    bottom: 40px;
-    right: 40px;
-    width: 100%;
-    max-width: 150px;
-    max-height: 500px;
-}
-
-#lacma-ticket {
-    bottom: 50px;
-    right: 75px;
-    width: 100%;
-    max-width: 400px;
-    max-height: 650px;
-}
-
-/* Maya's Collage Below */
-
-#blue-angel {
-    top: 40px;
-    left: 225px;
-    width: 100%;
-    max-width: 250px;
-    max-height: 500px;
- }
- 
- #round-roses {
-    top: 15px;
-    left: 15px;
-    width: 100%;
-    max-width: 250px;
-    max-height: 500px;
-    rotate: -110deg;
- }
-
- #yellow-butterfly {
-    top: 200px;
-    left: 55px;
-    width: 100%;
-    max-width: 150px;
-    max-height: 500px;
-    rotate: -30deg;
- }
-
- #dove-rose {
-    bottom: 280px;
-    left: 30px;
-    width: 100%;
-    max-width: 230px;
-    max-height: 500px;
- }
-
- #heart {
-    bottom: 40px;
-    left: 45px;
-    width: 100%;
-    max-width: 240px;
-    max-height: 500px;
- }
-
- #pink-angel {
-    bottom: 40px;
-    left: 255px;
-    width: 100%;
-    max-width: 240px;
-    max-height: 500px;
- }
-
- #fan {
-    bottom: 15px;
-    left: 490px;
-    width: 100%;
-    max-width: 240px;
-    max-height: 500px;
-    rotate: -55deg;
- }
-
- #rose {
-    bottom: 45px;
-    right: 20px;
-    width: 100%;
-    max-width: 240px;
-    max-height: 500px;
-    rotate: 80deg;
- }
-
- #blue-butterfly {
-    top: 60px;
-    right: 400px;
-    width: 100%;
-    max-width: 180px;
-    max-height: 500px;
-    rotate: 15deg;
- }
-
- #purple-flower {
-    top: 25px;
-    right: 230px;
-    width: 100%;
-    max-width: 230px;
-    max-height: 500px;
-    rotate: 40deg;
- }
-
- #sweetheart {
-    top: 30px;
-    right: 40px;
-    width: 100%;
-    max-width: 250px;
-    max-height: 500px;
-    rotate: 20deg;
- }
-
- #dove {
-    bottom: 380px;
-    right: 50px;
-    width: 100%;
-    max-width: 240px;
-    max-height: 500px;
- }
-
- #lily {
-    bottom: 260px;
-    right: 8px;
-    width: 100%;
-    max-width: 200px;
-    max-height: 500px;
-    rotate: -80deg;
- }
-
- /* philip's corkboard images */
- #bernie-sans {
-    top: 96px;
-    left: 220px;
-    max-width: 150px;
-    max-height: 150px;
-    rotate: -5deg;
- }
-
- #crane {
-    top: 63px;
-    right: 11px;
-    max-width: 300px;
-    max-height: 300px;
- }
-
- #garf {
-    bottom: 90px;
-    left: 77px;
-    max-width: 150px;
-    max-height: 150px;
-    rotate: 2deg;
- }
-
- #music {
-    max-width: 150px;
-    top: 63px;
-    left: 84px;
-    max-height: 150px;
-    rotate: 3deg;
- }
-
- #pen {
-    bottom: 75px;
-    right: 61px;
-    max-width: 150px;
-    max-height: 150px;
-    rotate: -3deg;
- }
-
- #thumbtack {
-    max-width: 25px;
-    max-height: 25px;
-    right: 140px;
-    top: 90px;
-    position: absolute;
-    z-index: 1;
- }
