--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ h1, h2, h3 {
 
 #corkboard {
     display: flex;
+    flex-direction: row-reverse;
     width: 100%;
     height: 100%;
     background-image: url('../img/corkboard.png');
@@ -260,7 +261,9 @@ h1, h2, h3 {
     height: 30px;
     width: 150px;
     align-self: flex-end;
-    z-index: 500;
+    margin-left: 0.5vw;
+    margin-right: auto;
+    z-index: 250;
     cursor: pointer;
 }
 
