--- a/css/style.css
+++ b/css/style.css
@@ -307,5 +307,13 @@ h1, h2, h3 {
 /* sticker sheet */
 .sticker-sheet {
     height: 22vh;
+    position: relative;
     /* idk how to make it change in size alongside the website screen */
+}
+
+.sticker {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    cursor: pointer;
 }
