--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,8 @@ h1, h2, h3 {
 .sticker {
     width: 50px;
     height: 50px;
+    bottom: 50px;
     position: absolute;
     cursor: pointer;
+    z-index: 401;
 }
