--- a/css/style.css
+++ b/css/style.css
@@ -260,14 +260,18 @@ h1, h2, h3 {
     margin-left: 0.5vw;
     margin-right: auto;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: row;
+    align-items: flex-end;
     padding: 0;
 }
 
 #shuffle-button-pop-up {
     background-image: url('../img/speech-bubble.png');
+    background-size: 100% 100%;
+    height: 70px;
     color: black;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-left: -2px;
 }
 
 #shuffle-button {
@@ -288,11 +292,38 @@ h1, h2, h3 {
     height: fit-content;
     min-height: 300px;
     padding: 2%;
-    background-image: url('../img/post-it.png');
     background-size: 100% 100%;
     position: absolute;
-    left: 25%;
-    top: 18%;
+}
+
+.post-it-loc1 {
+    left: 14%;
+    top: 14%;
+    z-index: 11;
+}
+
+.post-it-loc2 {
+    left: 22%;
+    top: 43%;
+    z-index: 12;
+}
+
+.post-it-loc3 {
+    left: 52%;
+    bottom: 35%;
+    z-index: 10;
+}
+
+.post-it-img1 {
+    background-image: url('../img/post-it-1.png');
+}
+
+.post-it-img2 {
+    background-image: url('../img/post-it-2.png');
+}
+
+.post-it-img3 {
+    background-image: url('../img/post-it-3.png');
 }
 
 .post-it2 {
