--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ body {
     padding: 0;
 }
 
+.hidden {
+    display: none;
+}
+
 /* title page */
 #title-page {
     position: absolute;
@@ -89,14 +93,12 @@ h1, h2, h3 {
 #title-wrapper {
     position: absolute;
     top: 5%;
-    right: 1%;
-    /* width: 58%; */
+    right: 5%;
     height: 20%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin: 0;
     padding: 0;
     padding-right: 9px;
 }
@@ -168,7 +170,7 @@ h1, h2, h3 {
 
 .disk-currently-playing {
     left: 52%;
-    top: 33%;
+    top: 38%;
     animation: spin 10s linear infinite;
 }
 
@@ -207,8 +209,8 @@ h1, h2, h3 {
     width: 58%;
     height: 10%;
     position: absolute;
-    right: 0;
-    bottom: 0;
+    right: 5%;
+    bottom: 5%;
 }
 
 .current-playlist-text p {
