--- a/css/corkboard.css
+++ b/css/corkboard.css
@@ -180,6 +180,7 @@
     right: 11px;
     max-width: 300px;
     max-height: 300px;
+    transform: scaleX(-1);
 }
 
 #garf {
@@ -209,7 +210,7 @@
 #thumbtack1 {
     max-width: 25px;
     max-height: 25px;
-    right: 140px;
+    right: 157px;
     top: 90px;
     position: absolute;
     z-index: 1;
