--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 div {
-    /* border: 1px solid var(--accent); */
+    border: 1px solid var(--accent);
     padding: 10px;
     box-sizing: border-box;
 }
